<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.cambridgeweblab</groupId>
    <artifactId>weblab-spring-boot</artifactId>
    <packaging>pom</packaging>
    <version>2.3.0-SNAPSHOT</version>

    <modules>
        <module>parent</module>
        <module>weblab-spring-boot-starter</module>
        <module>weblab-spring-boot-starter-workflow</module>
        <module>weblab-spring-boot-starter-actions</module>
        <module>weblab-spring-boot-autoconfiguration</module>
    </modules>

    <properties>
        <!-- NOTE: Dependency management comes via weblab-common-java's Spring Boot as well
             as Spring Boot so they may conflict if not aligned -->
        <common-java.version>main-SNAPSHOT</common-java.version>
        <spring-boot.version>2.3.12.RELEASE</spring-boot.version>
        <spring-security-jwt.version>1.0.9.RELEASE</spring-security-jwt.version>
        <activiti.version>5.19.0.1</activiti.version>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>


    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/cambridgeweblab/releases</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <!-- WEBLAB COMMON -->
            <dependency>
                <groupId>com.github.cambridgeweblab</groupId>
                <artifactId>common-java</artifactId>
                <version>${common-java.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-jpa</artifactId>
                <optional>true</optional>
                <version>${spring-boot.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <rulesets>
                        <ruleset>lint/pmd-ruleset.xml</ruleset>
                    </rulesets>
                    <printFailingErrors>true</printFailingErrors>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                            <goal>cpd-check</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.github.cambridgeweblab</groupId>
                        <artifactId>java-lint-config-weblab</artifactId>
                        <version>1.0.3</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.20</version>
                </plugin>
                <plugin>
                    <groupId>org.gaul</groupId>
                    <artifactId>modernizer-maven-plugin</artifactId>
                    <version>2.1.0</version>
                    <configuration>
                        <javaVersion>11</javaVersion>
                        <includeTestClasses>false</includeTestClasses>
                    </configuration>
                    <executions>
                        <execution>
                            <id>modernizer</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>modernizer</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>3.7</version>
                <configuration>
                    <rulesets>
                        <ruleset>lint/pmd-ruleset.xml</ruleset>
                    </rulesets>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <profiles>
        <profile>
            <id>shippable</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>
                            <version>2.20</version>
                            <configuration>
                                <redirectTestOutputToFile>true</redirectTestOutputToFile>
                                <reportsDirectory>../shippable/testresults</reportsDirectory>
                                <tempDir>${project.build.directory}/surefire</tempDir>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-failsafe-plugin</artifactId>
                            <configuration>
                                <redirectTestOutputToFile>true</redirectTestOutputToFile>
                                <reportsDirectory>../shippable/testresults</reportsDirectory>
                                <workingDirectory>${project.build.directory}/surefire</workingDirectory>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
</project>